examples/pos/existentials.effekt
effect Foo[A] {
  def get[B](b: B): Tuple2[A, B]
}


def notEnoughTypeParams() = {
  try {
    do get[Int, String]("hello");
    println("Test")
  } with Foo[Int] {
    def get(c: Boolean) = { resume(Tuple2(42, c)) }
  }
}


def wrongTypes() = {
  try {
    do get[Int, String]("hello");
    println("Test")
  } with Foo[Int] {
    def get[C](c: Boolean) = { resume(Tuple2(42, c)) }
  }
}