examples/neg/issue373/existentials_wrong_arity.effekt
interface Eff[A] {
  def op[B](x: A): A
}

def main() =
  try {
    val msg: String = eff.op[Int]("hello");
    println(msg)
  } with eff: Eff[Int] { def op[B](x) = resume(x / 1) }